# mirea_cpp_tasks

./: .gitignore  LICENSE.md  __111.cpp  __temp.cpp  cli_data_reader.h++  readme.txt  useful_functions.h++
Additional_tasks/: 109_calendar.cpp  109_calendar_v2.cpp  110_monks.cpp  111_hanoyskaya_bashna.cpp  99_byki_i_korovy.cpp
Additional_tasks/100/: 100.cpp  build_and_run.sh
Additional_tasks/104/: 104.cpp  build.sh  build_and_run.sh  commands.hpp  data.yaml  data_file_checker.py  (+6 more)
Additional_tasks/112_Synthesizer/: CMakeLists.txt  Synthesizer.cpp  app  build.sh
Additional_tasks/112_Synthesizer/data/: generator.py
ControlWork_demo/: 1.cpp  2.cpp  3.cpp  4.cpp
Lesson1/: arifmetika  arifmetika.cpp  eshe_yravnenie.cpp  lampa_so_shtorkoy.cpp  name.cpp  yravnenie.cpp
Lesson2/: 1_konus.cpp  2_razvertivanye.cpp  3_funchiya.cpp  4_poradok.cpp  5_tabulachiya.cpp
Lesson3/: 1_zaem.cpp  2_ssyda.cpp  3_copy_file.cpp  4_filtr.cpp  5_char_sort_2.cpp  5_chars_sort.cpp
Lesson4/: 1_file.cpp  2_znak_chisla.cpp  3_geometricheskiye_figury.cpp  4_1_bilaya_slava.cpp  4_bilaya_slava.cpp  5_1.cpp  5_sinusoida.cpp  6_avtomaticheski_raspoznavatel.cpp  7_generator_psevdosluchainyh_chisel.cpp  8_matrix_multiplication.cpp  9_count_systems.cpp
Lesson5/: 1_algoritm_evklida.cpp  2_resheto_eratosfena.cpp  Files.17.cpp  LoremIpsum1.txt  info.csv  shariki.cpp
PermSort/: PermSort.cpp  PermSort.py  PermSortOptimized.cpp  PermSort_YaroslavK_2022.odp  PermSort_YaroslavK_2022_2.odp  PermSort_YaroslavK_2022_2.ppsx  PermSort_YaroslavK_2022_2.pptx  PermSort_YaroslavK_2022_3.pptx  spped_test.sh
(+39 files in other folders)
